restructure boby's response to json